[package]
name = "text_box"
version = "0.1.7"
authors = ["dafox416 <dvd_2014@hotmail.com>"]
edition = "2018"
description = "Create useful messages in console with text boxes using 'termion'."
license = "MIT OR Apache-2.0"
repository = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.4"